# kafchat

./: README.md  pyproject.toml
src/kafchat/kafka/: .con.py.swp  .pro_chat.py.swp  con.py  con_chat.py  multi_chat.py  pro.py  pro_chat.py
